
[package]
name = "llm_nature_experiential"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ndarray = "0.15"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"

[[bin]]
name = "sniff_run"
path = "src/bin/sniff_run.rs"


[[bin]]
name = "sniff_loop"
path = "src/bin/sniff_loop.rs"
